Materials made from 'Make Single User' have linked animation #62393

Closed
opened 2019-03-09 17:48:41 +01:00 by Vladimir · 10 comments

System Information
Operating system: Windows 10 64bit
Graphics card: GTX 950

Blender Version
Broken: blender-2.80.0, a0f2923fd8, windows64, 2019-03-08

Short description of error
Materials made from 'Make Single User' share animation from original object.

Exact steps for others to reproduce the error

  • open default scene with cube
  • in shader editor insert 2 keyframes on (roughness) socket
  • duplicate cube
  • in shader editor click to '2' - make single-user copy
  • open Dope Sheet
  • try to move keyframes first or second cube - they moves linked

bag_material.blend

**System Information** Operating system: Windows 10 64bit Graphics card: GTX 950 **Blender Version** Broken: blender-2.80.0, a0f2923fd821, windows64, 2019-03-08 **Short description of error** Materials made from 'Make Single User' share animation from original object. **Exact steps for others to reproduce the error** - open default scene with cube - in shader editor insert 2 keyframes on (roughness) socket - duplicate cube - in shader editor click to '2' - make single-user copy - open Dope Sheet - try to move keyframes first or second cube - they moves linked [bag_material.blend](https://archive.blender.org/developer/F6790842/bag_material.blend)
Author

Added subscriber: @VladimirKunyansky

Added subscriber: @VladimirKunyansky
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Hm, this was reported before (#59062) and apparently only partially fixed

Hm, this was reported before (#59062) and apparently only partially fixed
Member

I have reopened #59062 and will merge this report in...

I have reopened #59062 and will merge this report in...
Member

Closed as duplicate of #59062

Closed as duplicate of #59062

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Duplicate' to: 'Open'

Changed status from 'Duplicate' to: 'Open'
Bastien Montagne self-assigned this 2019-03-09 20:12:22 +01:00

Thos are not the same bugs, also they are similar ones. Explicit copy is not the same thing as 'make single user'…

Thos are not the same bugs, also they are similar ones. Explicit copy is not the same thing as 'make single user'…

This issue was referenced by 1cc8f9d463

This issue was referenced by 1cc8f9d463a7cffbe5a466a4d83a8070a5b8d959

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62393
No description provided.